--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 return newBoard;
             };
 
-            // --- THE GRANDMASTER BRAIN ---
+            // --- THE GRANDMASTER BRAIN (TUNED FOR ROBUSTNESS) ---
             const evaluateBoardState = (currentBoard, myInventory, enemyInventory) => {
                 const win = checkWinCondition(currentBoard);
                 if (win === PLAYER_ME) return 100000;
@@ -117,32 +117,51 @@
                     score += centerPiece.player === PLAYER_ME ? val : -val;
                 }
 
-                // 2. Advanced Threat Detection
+                // 2. Advanced Threat Detection with SIZE AWARENESS
                 for (const line of WIN_LINES) {
                     let myPieces = 0;
+                    let mySizeSum = 0;
                     let enemyPieces = 0;
+                    let enemySizeSum = 0;
                     let empty = 0;
-                    let blocked = false;
                     
                     for (const idx of line) {
                         const p = getTopPiece(currentBoard[idx]);
                         if (!p) empty++;
-                        else if (p.player === PLAYER_ME) myPieces++;
-                        else enemyPieces++;
+                        else if (p.player === PLAYER_ME) {
+                            myPieces++;
+                            mySizeSum += p.size;
+                        } else {
+                            enemyPieces++;
+                            enemySizeSum += p.size;
+                        }
                     }
 
-                    // Prioritize 2-in-a-row much higher to force blocks or wins
-                    if (myPieces === 2 && empty === 1) score += 200; 
-                    if (enemyPieces === 2 && empty === 1) score -= 210; // Slightly more afraid of losing
+                    // ROBUSTNESS FIX: A threat is only real if the pieces are strong.
+                    // 2 in a row logic:
+                    if (myPieces === 2 && empty === 1) {
+                         // If average size is small (e.g. 1+1 or 1+2), it's a weak threat
+                         if(mySizeSum <= 3) score += 50;  // Weak threat (easy to gobble)
+                         else if(mySizeSum === 4) score += 150; // Medium threat
+                         else score += 300; // Strong threat (Large pieces involved)
+                    }
+
+                    if (enemyPieces === 2 && empty === 1) {
+                        if(enemySizeSum <= 3) score -= 60; // We can probably gobble this
+                        else if(enemySizeSum === 4) score -= 160; // Dangerous
+                        else score -= 320; // Critical danger
+                    }
                     
-                    // Small bonus for 1 piece with 2 open spots (potential line)
+                    // Positional play: 1 piece with 2 open spots
                     if (myPieces === 1 && empty === 2) score += 10;
                     if (enemyPieces === 1 && empty === 2) score -= 10;
                 }
 
-                // 3. Inventory Conservation (Don't waste Large pieces early)
-                score += (myInventory[3] * 15);
-                score -= (enemyInventory[3] * 15);
+                // 3. Inventory Conservation (Valuing Mediums more now)
+                score += (myInventory[3] * 30); // Large is king
+                score += (myInventory[2] * 12); // Medium is now valued
+                score -= (enemyInventory[3] * 30);
+                score -= (enemyInventory[2] * 12);
 
                 return score;
             };
@@ -157,7 +176,11 @@
                             let sortScore = size * 10; 
                             const top = getTopPiece(currentBoard[i]);
                             // Bonus for gobbling an opponent (high priority to check these branches)
-                            if (top && top.player !== player) sortScore += 100;
+                            if (top && top.player !== player) {
+                                sortScore += 100;
+                                // Extra bonus for gobbling larger pieces (e.g. Medium gobbling Small)
+                                if (top.size === 2) sortScore += 50; 
+                            }
                             // Bonus for center
                             if (i === 4) sortScore += 50;
 
